added coravel link in UI.

--- a/UI/JobSchedulerDemo.ClientUI/Client/Shared/NavMenu.razor
+++ b/UI/JobSchedulerDemo.ClientUI/Client/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <a class="nav-link" href="https://localhost:4001/coravel/dashboard" target="_blank">
+                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Coravel
+            </a>
+        </div>
+        <div class="nav-item px-3">
             <a class="nav-link" href="http://localhost:8002/hangfire" target="_blank">
                 <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Hangfire
             </a>
