--- a/UI/JobSchedulerDemo.ClientUI/Client/Shared/NavMenu.razor
+++ b/UI/JobSchedulerDemo.ClientUI/Client/Shared/NavMenu.razor
@@ -30,14 +30,19 @@
             </a>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
+            <a class="nav-link" href="http://localhost:8003/hc" target="_blank">
+                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Hub HC
+            </a>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
+            <a class="nav-link" href="http://localhost:8011/hc" target="_blank">
+                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Hub HC
+            </a>
+        </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="http://localhost:8012/hc" target="_blank">
+                <span class="oi oi-arrow-circle-right" aria-hidden="true"></span> Hub HC
+            </a>
         </div>
     </nav>
 </div>
